--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "node app.js"
   },
   "repository": {
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/hasindusithmin/express-mongodb-crud#readme",
   "dependencies": {
+    "@faker-js/faker": "^7.5.0",
     "express": "^4.18.1",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "supertest": "^6.2.4"
   }
 }
