--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/hasindusithmin/express-mongodb-crud#readme",
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "supertest": "^6.2.4"
