--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
+    "node-fetch": "^2.6.7",
     "supertest": "^6.2.4"
   }
 }
